Minor Update on inventory

--- a/public/index.html
+++ b/public/index.html
@@ -3,34 +3,24 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple_touch_icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="48x48" href="./favicon/android_chrome_48x48.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no, viewport-fit=cover" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple_touch_icon.png"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon_32x32.png"/>
+  <link rel="icon" type="image/png" sizes="48x48" href="./favicon/android_chrome_48x48.png"/>
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon_16x16.png"/>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="theme-color" content="#0f172a" />
   <meta name="google-site-verification" content="7Oobnex7nIQoDhsti6k8MGo1BfTj_mCM90Fyv9ma7nQ" />
-  <meta name="author" content="Sands45">
+  <meta name="author" content="Sands45"/>
   <meta name="description"
-    content="Stall">
+    content="Stall"/>
   <meta name="keywords"
-    content="Stall, POS, Best POS, Point, point of sell, sell point of, selling, CRM, cashier, register">
+    content="Stall, POS, Best POS, Point, point of sale, sale point of, saleing, CRM, cashier, register"/>
   <title>Stall | Modern POS</title>
   <noscript>Your browser does not support JavaScript!</noscript>
 </head>
-
-<body class="bg-slate-700 m-0 p-0">
+<body class="m-0 p-0">
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div class="p-0 m-0 bg-slate-700 overflow-hidden" aria-label="Main" id="root"></div>
-  <script>
-    // if ("serviceWorker" in navigator) {
-    //   window.addEventListener("load", () => {
-    //     navigator.serviceWorker.register("./serviceworker.js").then((reg) => console.log('Success: ', reg.scope))
-    //       .catch((err) => console.log('Failure: ', err));
-    //   })
-    // }
-  </script>
+  <div class="overflow-hidden p-0 m-0" aria-label="Main" id="root"></div>
 </body>
-
 </html>
