Added responsiveness on sales page

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="48x48" href="./favicon/android_chrome_48x48.png"/>
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon_16x16.png"/>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <meta name="theme-color" content="#0f172a" />
+  <meta name="theme-color" content="#fffff" />
   <meta name="google-site-verification" content="7Oobnex7nIQoDhsti6k8MGo1BfTj_mCM90Fyv9ma7nQ" />
   <meta name="author" content="Sands45"/>
   <meta name="description"
